--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ test = nosetests
 build_html = build_sphinx -b html
 
 [egg_info]
-tag_build =
+tag_build = .dev
 tag_date = false
 tag_svn_revision = false
 
